@@ -18,6 +18,8 @@ GstTTMLNodeType gst_ttml_utils_node_type_parse (const gchar *name);
 
 gboolean gst_ttml_utils_is_blank_node (const gchar *content, int len);
 
+const gchar *gst_ttml_utils_node_type_name (GstTTMLNodeType type);
+
 G_END_DECLS
 
 #endif /* __GST_TTML_UTILS_H__ */
